2008-09-18  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellPublished.cs:
	Use the new SetMinMaxStrings method in ColumnCellText to define the
	min/max widths for these columns.

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellUnheard.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Gui/ColumnCellDownloadStatus.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellQueryText.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellDateTime.cs:
	Update to new ColumnCellText API, replacing the Text property with a
	GetText method so we can get the text for any arbitrary object (the
	min/max strings, for example) instead of just the bound object.

	* src/Core/Banshee.Services/Banshee.Query/BansheeQuery.cs: Add ShortLabels
	for a few fields, and make sorting by Grouping the same as sorting by
	track.

	* src/Libraries/Hyena/Hyena.Query/QueryField.cs: Add a ShortLabel property
	that default to the value of Label.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/XmlColumnController.cs:
	Only set the min/max widths if they were actually specified in the XML.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellFileSize.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellTrackNumber.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellPositiveInt.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellDuration.cs:
	Use the new SetMinMaxStrings method and change to the new GetText method.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/DefaultColumnController.cs:
	Set the Uri column to ellipsize in the middle of the string, and change
	the ColumnCellPositiveInt columns to use its new ctor to specify the
	min/max number of digits (eg always 4 for Year).  Use the QueryFields'
	ShortLabel property for the column Title.
